--- a/ES_TA_Capítulo_09_MT5_Trading_en_Vivo_SMA.ipynb
+++ b/ES_TA_Capítulo_09_MT5_Trading_en_Vivo_SMA.ipynb
@@ -343,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.9 ('ia')",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +357,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3850058cb9318b99b34f2356463c23897513403d1f04f2e0fc408b282c168631"
+   }
   }
  },
  "nbformat": 4,
